[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
thiserror = "1.0.57"
serde_json = { features = ["preserve_order", "unbounded_depth"], version = "1.0.113" }

[workspace.package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = ["command-line-utilities", "filesystem"]
edition = "2021"
keywords = ["cli", "json", "terminal", "tool", "query"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yamafaktory/jql"
version = "7.1.5"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = "deny"
rust_2021_compatibility = "forbid"
unreachable_pub = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
clippy_pedantic = "deny"

# https://github.com/rust-lang/cargo/issues/8264
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
