[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
thiserror = "2.0.12"
serde_json = { features = ["preserve_order", "unbounded_depth"], version = "1.0.140" }

[workspace.package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = ["command-line-utilities", "filesystem"]
edition = "2024"
keywords = ["cli", "json", "terminal", "tool", "query"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yamafaktory/jql"
version = "8.0.7"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "deny", priority= -1 }
rust_2021_compatibility = { level = "forbid", priority= -1 }
unreachable_pub = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
all = "deny"

# https://github.com/rust-lang/cargo/issues/8264
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
