[package]
authors.workspace = true
categories.workspace = true
description = "Runner for jql - the JSON Query Language tool."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "jql-runner"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
indexmap = { version = "2.9.0", features = ["rayon"] }
jql-parser = { path = "../jql-parser", version = "8.0.5" }
rayon = "1.10.0"
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[lib]
path = "src/lib.rs"

[[bench]]
harness = false
name = "benchmark"
path = "benches/benchmark.rs"
