[package]
authors.workspace = true
categories.workspace = true
description = "jql - JSON Query Language - is a fast and simple command-line tool to manipulate JSON data."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "jql"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
colored_json = { version = "5.0.0" }
jql-runner = { path = "../jql-runner", version = "8.0.5" }
serde = "1.0.219"
serde_stacker = "0.1.12"
serde_json.workspace = true
tokio = { version = "1.44.2", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
